--- a/DriveAppFrontend/package.json
+++ b/DriveAppFrontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
